constructor fix col overflow

--- a/assets/constructor.css
+++ b/assets/constructor.css
@@ -98,6 +98,18 @@
     .constructor-col {
         min-height: unset;
         width: 50%;
+        max-height: 85vh;
+        overflow-y: scroll;
+    }
+
+    .constructor-col::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .constructor-col {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
     }
 }
 
@@ -278,6 +290,7 @@
     font-style: italic;
     font-weight: 400;
     line-height: 18px;
+    z-index: 5;
 }
 
 @media (min-width: 820px) {
